overlays/padmin1/drone-auth-config-plugin/overlays/qa/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone-auth-config-plugin
spec:
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: app-qa-drone-auth-config-plugin
    spec:
      containers:
      - env:
        - name: CREATION_TIMESTAMP
          value: "1565734736518"
        - name: INSTANCE
          value: drone-auth-config-plugin.qa.admin.sharecare.com
        - name: MAESTRO_CREATION_TIMESTAMP
          value: "1565734736518"
        - name: MAESTRO_INSTANCE
          value: drone-auth-config-plugin.qa.admin.sharecare.com
        - name: MAESTRO_HOSTS
          value: drone-auth-config-plugin.qa.admin.sharecare.com
        - name: GITHUB_TOKEN
          valueFrom:
            secretKeyRef:
              key: GITHUB_TOKEN
              name: drone-auth-config-plugin
        - name: PLUGIN_SECRET
          valueFrom:
            secretKeyRef:
              key: PLUGIN_SECRET
              name: drone-auth-config-plugin
        - name: SSO_KEYWORD_SECRET
          valueFrom:
            secretKeyRef:
              key: SSO_KEYWORD_SECRET
              name: drone-auth-config-plugin
        - name: SSO_CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              key: SSO_CLIENT_SECRET
              name: drone-auth-config-plugin
        image: nexus.admin.sharecare.com/drone-auth-config-plugin:1.1.0-70
        name: drone-auth-config-plugin
